# farm-manager-mcp-ml-api

./: .env  Dockerfile  README.md  api.py  pyproject.toml  requirement.txt  server.py
model/: model.py
utils/: graphql_utils.py  image_utils.py  model_utils.py
